...
                          textCapitalization: TextCapitalization.words,
                        ),
                        const SizedBox(height: 16),
                        TextField(
                          controller: emailController,
                          decoration: InputDecoration(
                            labelText: 'Email',
                            prefixIcon: const Icon(Icons.email),
                            border: OutlineInputBorder(
                              borderRadius: BorderRadius.circular(8),
                            ),
                          ),
                          keyboardType: TextInputType.emailAddress,
...
                                DropdownMenuItem(
                                  value: 'EMPLOYEE',
                                  child: Text('Pracownik'),
                                ),
                                DropdownMenuItem(
                                  value: 'MANAGER',
                                  child: Text('Manager'),
                                ),
                              ],
                              onChanged:
                                  (v) => setDialogState(() => roleSystem = v!),
                            ),
                            const SizedBox(height: 16),
...
